<resources>
    <string name="app_name">ARC_Project</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="logout">Logout</string>
    <string name="visitseller">VisitSeller</string>
    <string name="MyStores">Stores</string>
    <string name="action_search">Search</string>
    <string name="action_cart">actioncart</string>
    <string name="login">login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="mobilenumber">Mobile Number</string>
</resources>
