<!--
  ~ Copyright/**
  ~          * CedCommerce
  ~           *
  ~           * NOTICE OF LICENSE
  ~           *
  ~           * This source file is subject to the End User License Agreement (EULA)
  ~           * that is bundled with this package in the file LICENSE.txt.
  ~           * It is also available through the world-wide-web at this URL:
  ~           * http://cedcommerce.com/license-agreement.txt
  ~           *
  ~           * @category  Ced
  ~           * @package   MageNative
  ~           * @author    CedCommerce Core Team <connect@cedcommerce.com >
  ~           * @copyright Copyright CEDCOMMERCE (http://cedcommerce.com/)
  ~           * @license      http://cedcommerce.com/license-agreement.txt
  ~           */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

<!--    <item android:id="@+id/MageNative_action_signin" android:title="@string/SignIn"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/MageNative_action_settings" android:title="@string/Settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item
        android:id="@+id/MageNative_action_search"
        android:title="@string/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/MageNative_action_cart"
        android:title="@string/action_cart"
        android:orderInCategory="2"
        android:actionLayout="@layout/magenative_feed_update_count"
        app:showAsAction="always"
        />
    <item android:id="@+id/MageNative_store_view" android:title="@string/MyStores"
        android:orderInCategory="100" app:showAsAction="never" />
    <!--<item android:id="@+id/MageNative_action_cmsPage" android:title="@string/cmspage" android:orderInCategory="100" android:showAsAction="never"/>-->
</menu>
